contact and about set-up

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -5,4 +5,30 @@
   Description: html to display information about the application.
 -->
 
-<p>about works!</p>
+<div fxLayout="column">
+
+  <mat-card class="card-form">
+
+    <mat-card-title class="title">
+      <h2>How to use the Application</h2>
+    </mat-card-title>
+
+    <div class="about">
+
+      <mat-card-content class="about-content">
+        <p class="center">
+          test
+        </p>
+      </mat-card-content>
+
+      <mat-card-content class="about-content">
+        <p>
+          test
+        </p>
+      </mat-card-content>
+
+    </div>
+
+  </mat-card>
+
+</div>
