--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -5,4 +5,26 @@
   Description: html to display contact information.
 -->
 
-<p>contact works!</p>
+<div fxLayout="column">
+
+  <mat-card class="card-form">
+
+    <mat-card-title class="title">
+      <h2> Contact Us</h2>
+    </mat-card-title>
+
+    <mat-card-content class="center">
+      <p>
+        Questions or comments?
+        Please feel free to reach out.
+        <br>
+        Email: <a href="mailto:walter.mccue@gmail.com">
+          <mat-icon style="vertical-align: bottom;">email</mat-icon> walter.mccue@gmail.com
+        </a>
+      </p>
+    </mat-card-content>
+
+  </mat-card>
+
+</div>
+
